# itmo

./: .gitattributes  README.md
a&sd/: README.md
a&sd/.docs/: P3208.Васильев Никита Алексеевич.ABCD.docx  P3208.Васильев Никита Алексеевич.EFGH.docx  P3208.Васильев Никита Алексеевич.IJKL.docx  P3208.Васильев Никита Алексеевич.MNOP.docx
a&sd/0/: CMakeLists.txt  solution.cpp
a&sd/A/: CMakeLists.txt  solution.cpp
a&sd/B/: CMakeLists.txt  solution.cpp
a&sd/C/: CMakeLists.txt  solution.cpp
a&sd/D/: CMakeLists.txt  solution.cpp
a&sd/E/: CMakeLists.txt  main.cpp
a&sd/F/: CMakeLists.txt  main.cpp
a&sd/G/: CMakeLists.txt  main.cpp
a&sd/H/: CMakeLists.txt  main.cpp
a&sd/I/: CMakeLists.txt  main.cpp
a&sd/J/: CMakeLists.txt  main.cpp
ai systems/: README.md
blps/: README.md
bonus_track/: 1.2.1.py  1.2.2.py  1.3.1.py  1.4.2.sql  1.4.3.sql  1.4.4.sql  1.5.2.js  PA 1.1.py  PA 1.2.sql  README.md
computational math/: README.md
computer architecture/: README.md
computer networks/: README.md
databases/: Main.sql  README.md
discrete math/: README.md
embedded systems/: README.md
infa/: README.md
io systems/: README.md
is/: README.md
knowledge graphs/: README.md
math statistics/: README.md
mobile application development/: AGENTS-CONTEXT.md  Makefile  README.md  agent-context.md
modeling/: README.md
opd/: README.md
operating systems/: README.md
operating systems/lab 2/test/: CMakeLists.txt  ema-sort-int.c  input-generator  input-generator.c  test_basic.cpp  test_random.cpp  test_seq.cpp
operating systems/lab 2/test/lib/: CMakeLists.txt  cmp_file.cpp  cmp_file.hpp  exception.cpp  exception.hpp  file.cpp  file.hpp  log_file.cpp  log_file.hpp
opi/: README.md
ppi/: README.md
proga/: README.md
programming languages/: README.md
programming languages/labs/lab3/solution/: CMakeLists.txt
programming languages/labs/lab3/solution/include/: bmp.h  image.h  io.h  transform-map.h  transform.h
programming languages/labs/lab3/solution/src/: image.c  io.c  main.c  transform-map.c  transform.c
programming languages/labs/lab5/: CMakeLists.txt  README.md
programming languages/labs/lab5/asm/: sepia.asm
programming languages/labs/lab5/include/: bmp.h  filter.h  filter_sse.h  image.h  io.h
programming languages/labs/lab5/src/: filter.c  image.c  io.c  main.c
programming languages/labs/lab5/tests/: CMakeLists.txt  test.c
rshd/: README.md
software systems architecture/: README.md
tfkp/: README.md  TR.tex
tpo/: README.md
web/: README.md
(+2369 files in other folders)
